Fix horizontal scrollbar showing in menu

--- a/static/scss/components/_menu.scss
+++ b/static/scss/components/_menu.scss
@@ -24,7 +24,7 @@
   margin: 0;
   padding: 0;
   white-space: nowrap;
-  overflow-x: scroll;
+  overflow-x: auto;
   //-webkit-overflow-scrolling: touch; // dropdown menu not showing
   -ms-overflow-style: none;
 
